--- a/index.html
+++ b/index.html
@@ -84,11 +84,62 @@
      </header>
     <!-- ----=======================main====================----  -->
      <main>
-        
+        <!-- <a href=""><i class="fa-brands fa-google-play"></i></a> -->
      </main>
 
     <!-- ---==================footer=================------  -->
+     <hr>
      <footer>
+        <div class="footer-container container">
+            <div class="footer-card">
+                <img src="image/logo@2x-free-img-120x40 (5).png" alt="">
+                <h3>The best look anytime, anywhere.</h3>
+            </div>
+            <div class="footer-card">
+                <div class="footer-content-container">
+                    <div class="footer-content">
+                        <p class="font-txt">for her</p>
+                        <div class="footer-link">
+                            <a href="">women jeans</a>
+                            <a href="">tops and shirt</a>
+                            <a href="">women jackets</a>
+                            <a href="">heels and flats</a>
+                            <a href="">women accessories</a>
+                        </div>
+                    </div>
+                    <div class="footer-content">
+                        <p class="font-txt">for him</p>
+                        <div class="footer-link">
+                        <a href="">men jeans</a>
+                        <a href="">men shirt</a>
+                        <a href="">men jackets</a>
+                        <a href="">heels shoes</a>
+                        <a href="">men accessories</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-card">
+                <p class="font-txt">subscribe</p>
+                <div class="footer-input">
+                    
+                    <input type="email"  placeholder="Your email address...">
+                    <button>subscribe</button>
+                </div>
+            </div>
+
+        </div>
+        <hr>
+        <div class="copyright container">
+            <p>Copyright © 2024 SUMIT SARKAR. CMBD-246</p>
+            <div class="social">
+                <a href="www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                <a href="www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                <a href="www.twitter.com"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="www.gmail.com"><i class="fa-brands fa-google"></i></a>
+                <a href="www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+        </div>
 
      </footer>
     <script src="script.js"></script>
