--- a/contant.html
+++ b/contant.html
@@ -30,7 +30,7 @@
      <header>
         <div class="head">
             <div class="logo">
-                <a href="#"><img src="image/logo1-free-img-140x47 (2).png" alt=""></a>
+                <a href="index.html"><img src="image/logo1-free-img-140x47 (2).png" alt=""></a>
             </div>
             <nav>
                 <div class="left">
@@ -73,12 +73,66 @@
         <section>
             <div class=" contactbg "></div>
             <div class="contactbg-content container">
-               <h1></h1>
+               <h1>contact us</h1>
             </div>
         </section>
      </header>
     <!-- ----=======================main====================----  -->
      <main>
+       <!-- ---------  queries start here---------  -->
+        <section id="queries">
+            <div class="container queries-body">
+                <h5>Have any queries?</h5>
+                <h2>We're here to help.​</h2>
+                <div class="hr"></div>
+                <div class="queries-container">
+                    <div class="queries-card">
+                        <h3>sales</h3>
+                        <p>Vestibulum ante ipsum primis in faucibus orci luctus.</p>
+                        <h5>01800 123 4567</h5>
+                    </div>
+                    <div class="queries-card">
+                        <h3>complaints</h3>
+                        <p>Vestibulum ante ipsum primis in faucibus orci luctus.</p>
+                        <h5>01900 223 8899</h5>
+                    </div>
+                    <div class="queries-card">
+                        <h3>returns</h3>
+                        <p>Vestibulum ante ipsum primis in faucibus orci luctus.</p>
+                        <h5>abcd@mail.com</h5>
+                    </div>
+                    <div class="queries-card">
+                        <h3>marketing</h3>
+                        <p>Vestibulum ante ipsum primis in faucibus orci luctus.</p>
+                        <h5>01700 444 5578</h5>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+        <!-- --------------- form box start here------------  -->
+        <section id="form-box">
+            <div class="container">
+                <div class="formbox-card">
+                    <h6>Don't be a stranger!</h6>
+                    <h2>You tell us. We listen.</h2>
+                    <p>Cras elementum finibus lacus nec lacinia. Quisque non convallis nisl, eu condimentum sem. Proin dignissim libero lacus, ut eleifend magna vehicula et. Nam mattis est sed tellus.</p>
+                </div>
+                <div class="formbox-card">
+                    <form action="#" id="form">
+                        <input type="text" name="name" placeholder="name">
+                        <input type="text" name="subject" placeholder="subject">
+                        <input type="email" name="email" placeholder="email">
+                        <textarea name="massage" id="massage" placeholder="massage" ></textarea>
+                        <input type="button" class="btn" value="send massage">
+                    </form>
+                </div>
+            </div>
+
+        </section>
+        <hr>
+        <a href="contant.html">ALE UP TO 70% OFF FOR ALL CLOTHES & FASHION ITEMS, ON ALL BRANDS.</a>
         <!-- <a href=""><i class="fa-brands fa-google-play"></i></a> -->
      </main>
 
