--- a/everything.html
+++ b/everything.html
@@ -43,7 +43,7 @@
      <header>
         <div class="head">
             <div class="logo">
-                <a href="#"><img src="image/logo@2x-free-img-120x40 (5).png" alt=""></a>
+                <a href="index.html"><img src="image/logo@2x-free-img-120x40 (5).png" alt=""></a>
             </div>
             <nav>
                 <div class="left ">
