--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <header>
         <div class="head">
             <div class="logo">
-                <a href="#"><img src="image/logo1-free-img-140x47 (2).png" alt=""></a>
+                <a href="index.html"><img src="image/logo1-free-img-140x47 (2).png" alt=""></a>
             </div>
             <nav>
                 <div class="left">
