--- a/contant.html
+++ b/contant.html
@@ -113,7 +113,7 @@
         </section>
         <!-- --------------- form box start here------------  -->
         <section id="form-box">
-            <div class="container">
+            <div class="container" id="form-container">
                 <div class="formbox-card">
                     <h6>Don't be a stranger!</h6>
                     <h2>You tell us. We listen.</h2>
@@ -124,7 +124,7 @@
                         <input type="text" name="name" placeholder="name">
                         <input type="text" name="subject" placeholder="subject">
                         <input type="email" name="email" placeholder="email">
-                        <textarea name="massage" id="massage" placeholder="massage" ></textarea>
+                        <textarea name="massage" id="massage" placeholder="massage" cols="50" rows="10"></textarea>
                         <input type="button" class="btn" value="send massage">
                     </form>
                 </div>
@@ -132,7 +132,9 @@
 
         </section>
         <hr>
-        <a href="contant.html">ALE UP TO 70% OFF FOR ALL CLOTHES & FASHION ITEMS, ON ALL BRANDS.</a>
+        <div class=" container">
+            <a href="contant.html" class="tag">SALE UP TO 70% OFF FOR ALL CLOTHES & FASHION ITEMS, ON ALL BRANDS.</a>
+        </div>
         <!-- <a href=""><i class="fa-brands fa-google-play"></i></a> -->
      </main>
 
