--- a/index.html
+++ b/index.html
@@ -84,7 +84,53 @@
      </header>
     <!-- ----=======================main====================----  -->
      <main>
-        <!-- <a href=""><i class="fa-brands fa-google-play"></i></a> -->
+
+        <!-- ------special section----  -->
+        <section id="special">
+            <div class="special-bg">
+               <div class=" container">
+                <h4>Limited Time Offer</h4>
+                <h2>Special Edition</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                <h4>Buy This T-shirt At 20% Discount, Use Code OFF 20</h4>
+                <button>shop now</button>
+               </div>
+
+            </div>
+         </section>
+         
+        <!-- -----connect sction----  -->
+        <section id="connect">
+            <div class="container" id="connect-container">
+                <div class="connect-card">
+                    <img src="image/globe-free-img.png" alt="">
+                    <h5>Worldwide Shipping</h5>
+                    <p>It elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                </div>
+                <div class="connect-card">
+                    <img src="image/quality-free-img (1).png" alt="">
+                    <h5>Best Quality</h5>
+                    <p>It elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                </div>
+                <div class="connect-card">
+                    <img src="image/tag-free-img.png" alt="">
+                    <h5>Best offer</h5>
+                    <p>It elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                </div>
+                <div class="connect-card">
+                    <img src="image/lock-free-img.png" alt="">
+                    <h5>Secure Payments</h5>
+                    <p>It elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                </div>
+
+            </div>
+        </section>
+
+       
+        <hr>
+        <div class=" container">
+            <a href="contant.html" class="tag">SALE UP TO 70% OFF FOR ALL CLOTHES & FASHION ITEMS, ON ALL BRANDS.</a>
+        </div>
      </main>
 
     <!-- ---==================footer=================------  -->
