--- a/about.html
+++ b/about.html
@@ -73,12 +73,115 @@
         <section>
             <div class=" aboutbg "></div>
             <div class="aboutbg-content container">
-               <h1></h1>
+               <h1>About us</h1>
             </div>
         </section>
      </header>
     <!-- ----=======================main====================----  -->
      <main>
+        <!-- ----------about hero section-----  -->
+        <section id="about-hero">
+            <div class="container" id="about-hero-container">
+                <div class="about-hero-content">
+                    <h2>Who We Are</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.</p>
+                </div>
+                <img src="image/slide-image-free-img.jpg" alt="">
+
+            </div>
+            
+        </section>
+
+        <!-- -------- team section------  -->
+         <section id="team">
+            <div class="container" id="team-container">
+                <h4 class="h4">A Few Words About</h4>
+                <h2>Our Team</h2>
+                <p>Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
+
+                <div class="client-container">
+                    <div class="client-card">
+                        <img src="image/team1-free-img.png" alt="">
+                        <h4>Harvey Spector</h4>
+                        <p>Founder - CEO</p>
+                    </div>
+                    <div class="client-card">
+                        <img src="image/team2-free-img.png" alt="">
+                        <h4>Jessica Pearson</h4>
+                        <p>COO</p>
+                    </div>
+                    <div class="client-card">
+                        <img src="image/team3-free-img.png" alt="">
+                        <h4>Rachel Zain</h4>
+                        <p>Marketing Head</p>
+                    </div>
+                    <div class="client-card">
+                        <img src="image/team4free-img.png" alt="">
+                        <h4>Luise Litt</h4>
+                        <p>Lead Developer</p>
+                    </div>
+                    <div class="client-card">
+                        <img src="image/team5-free-img.png" alt="">
+                        <h4>Katrina Bennett</h4>
+                        <p>Intern Designer</p>
+
+                    </div>
+                    <div class="client-card">
+                        <img src="image/team6-free-img.png" alt="">
+                        <h4>Mike Ross</h4>
+                        <p>Intern Designer</p>
+                    </div>
+                </div>
+
+            </div>
+         </section>
+
+         <!-- ----follow----  -->
+
+         <section id="follow">
+            <div class="follow-content">
+                <h2>follow us</h2>
+                <div class="follow-social">
+                    <a href="www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="www.twitter.com"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="www.gmail.com"><i class="fa-brands fa-google"></i></a>
+                    <a href="www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+
+                </div>
+            </div>
+
+         </section>
+         <!-- -----connect section------  -->
+          <section id="connect">
+            <div class="container" id="connect-container">
+                <div class="connect-card">
+                    <img src="image/globe-free-img.png" alt="">
+                    <h5>Worldwide Shipping</h5>
+                    <p>It elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                </div>
+                <div class="connect-card">
+                    <img src="image/quality-free-img (1).png" alt="">
+                    <h5>Best Quality</h5>
+                    <p>It elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                </div>
+                <div class="connect-card">
+                    <img src="image/tag-free-img.png" alt="">
+                    <h5>Best offer</h5>
+                    <p>It elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                </div>
+                <div class="connect-card">
+                    <img src="image/lock-free-img.png" alt="">
+                    <h5>Secure Payments</h5>
+                    <p>It elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                </div>
+
+            </div>
+          </section>
+        <hr>
+        <div class=" container">
+            <a href="contant.html" class="tag">SALE UP TO 70% OFF FOR ALL CLOTHES & FASHION ITEMS, ON ALL BRANDS.</a>
+        </div>
         <!-- <a href=""><i class="fa-brands fa-google-play"></i></a> -->
      </main>
 
